force-app/main/default/objects/Apttus__WizardDesign__c/Apttus__WizardDesign__c.object-meta.xml
<CustomObject>
    <description>Holds all the wizard design records</description>
    <label>Wizard Design</label>
    <nameField>
        <label>Design Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>