force-app/main/default/objects/Apttus__WizardDesign__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Wizard Design is Active. Once activated, the wizard cannot be modified.</description>
    <inlineHelpText>Indicates the Wizard Design is Active. Once activated, the wizard cannot be modified.</inlineHelpText>
    <label>Active (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>