force-app/main/default/objects/Apttus__WizardDesign__c/fields/Apttus__AllowReviewEdit__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AllowReviewEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the runtime user is allowed to edit inputs during review</description>
    <inlineHelpText>Indicates whether the runtime user is allowed to edit inputs during review</inlineHelpText>
    <label>Allow Review Edit</label>
    <type>Checkbox</type>
</CustomField>