force-app/main/default/objects/Apttus__WizardDesign__c/fields/Apttus__CSSFilename__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CSSFilename__c</fullName>
    <description>Name of the CSS file in the static resource</description>
    <inlineHelpText>Name of the CSS file in the static resource</inlineHelpText>
    <label>CSS Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>