force-app/main/default/objects/Apttus__WizardDesign__c/fields/Apttus__DataSourceCallback__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DataSourceCallback__c</fullName>
    <label>DataSource Callback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>