force-app/main/default/objects/Apttus__WizardDesign__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>Provides more information for the runtime wizard user to understand the intended use of the runtime Wizard.</description>
    <inlineHelpText>Provides more information for the runtime wizard user to understand the intended use of the runtime Wizard.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>