force-app/main/default/objects/Apttus__WizardDesign__c/fields/Apttus__MetaPropertyFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MetaPropertyFieldSetName__c</fullName>
    <label>Meta Property FieldSet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>