force-app/main/default/objects/Apttus__WizardDesign__c/fields/Apttus__RuntimeHelpText__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RuntimeHelpText__c</fullName>
    <description>Describe what the runtime user can see as a help or instruction description for this wizard design.</description>
    <inlineHelpText>Describe what the runtime user can see as a help or instruction description for this wizard design.</inlineHelpText>
    <label>Runtime Help Text</label>
    <type>TextArea</type>
</CustomField>