force-app/main/default/objects/Apttus__WizardDesign__c/fields/Apttus__StaticResource__c.field-meta.xml
<CustomField>
    <fullName>Apttus__StaticResource__c</fullName>
    <description>Static resource file to be used for customizing wizard</description>
    <inlineHelpText>Static resource file to be used for customizing wizard</inlineHelpText>
    <label>Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>