force-app/main/default/objects/Apttus__WizardDesign__c/fields/Apttus__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Status__c</fullName>
    <description>Wizard design status</description>
    <inlineHelpText>Wizard design status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>